mod minor adjustment

--- a/src/.config/Code/User/settings.json
+++ b/src/.config/Code/User/settings.json
@@ -1,23 +1,28 @@
 {
-    "workbench.editor.enablePreview": false,
-    "workbench.editor.showTabs": true,
-    "explorer.confirmDelete": false,
-    "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
-    "editor.formatOnType": true,
+  "workbench.editor.enablePreview": false,
+  "workbench.editor.showTabs": true,
+  "explorer.confirmDelete": false,
+  "files.insertFinalNewline": true,
+  "files.trimTrailingWhitespace": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnType": true,
+  "editor.formatOnSave": true,
+  "editor.tabSize": 2,
+  "editor.rulers": [80],
+  "editor.quickSuggestions": {
+    "other": true,
+    "comments": true,
+    "strings": true
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "[typescriptreact]": {
     "editor.formatOnSave": true,
-    "editor.tabSize": 2,
-    "editor.rulers": [
-        80
-    ],
-    "editor.quickSuggestions": {
-        "other": true,
-        "comments": true,
-        "strings": true
-    },
-    "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
-    },
-    "git.autofetch": true,
-    "git.enableSmartCommit": true
+    "editor.formatOnType": true,
+    "editor.formatOnPaste": true
+  },
+  "git.autofetch": true,
+  "git.enableSmartCommit": true,
+  "settingsSync.keybindingsPerPlatform": false
 }
