--- a/src/.config/Code/User/settings.json
+++ b/src/.config/Code/User/settings.json
@@ -5,7 +5,7 @@
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnType": true,
+  // "editor.formatOnType": true,
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
   "editor.rulers": [80],
@@ -18,11 +18,12 @@
     "source.fixAll.eslint": true
   },
   "[typescriptreact]": {
-    "editor.formatOnSave": true,
-    "editor.formatOnType": true,
-    "editor.formatOnPaste": true
+    "editor.formatOnSave": true
+    //     "editor.formatOnType": true,
+    //     "editor.formatOnPaste": true
   },
   "git.autofetch": true,
   "git.enableSmartCommit": true,
-  "settingsSync.keybindingsPerPlatform": false
+  "settingsSync.keybindingsPerPlatform": false,
+  "workbench.colorTheme": "Default Dark+"
 }
