--- a/src/.config/git/config
+++ b/src/.config/git/config
@@ -51,6 +51,9 @@
   co = checkout
   ci = commit -v
 
+  p = !git stash && (git co master 2> /dev/null || git co main) && git pull && git branch --merged | grep -v -e '*' -e master | xargs git branch -d && git stash pop
+
+
   ps = push origin HEAD
 
   sl = stash list -p
